--- a/Styling/CSS/main.css
+++ b/Styling/CSS/main.css
@@ -1,8 +1,7 @@
-.html {
-    width: 100%;
+html, body {
     height: 100%;
-}
+    margin: 0%;
 
-.html .body {
     background-color: rgb(85, 85, 85);
+    padding: 0%;
 }
